kubernetes/apps/flux-system/headlamp/app/ingress.yaml
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/master/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name headlamp
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  ingressClassName: internal
  rules:
    - host: "${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  number: 80
